This documents significant changes in the 93u+m branch of AT&T ksh93.
For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2021-12-05:

- Fixed an issue on illumos that caused some parameters in the getconf
  builtin to fail.

- The cd built-in command now supports a -e option (as specified in
  https://www.austingroupbugs.net/view.php?id=253). Passing -e alongside -P
  is used to guarantee the cd built-in returns with exit status 1 if the
  current working directory couldn't be determined after successfully changing
  the directory.

2021-12-01:

- Fixed a memory fault that occurred when a discipline function exited
  with an error from a special builtin or when a discipline function exited
  because of a signal.

2021-11-29:

- Fixed a memory fault that prevented ksh from functioning on ARM-based Macs.

- A bug that caused the time keyword to override the errexit shell option has
  been fixed.

- Fixed a crash that could occur when a KEYBD trap was set and a multi-line
  command substitution was input in an interactive shell.

- The shell linter's warnings for obsolete arithmetic operators in [[ ... ]]
  and unnecessary variable expansion in ((...)) have been improved.

2021-11-24:

- The --posix mode was amended to stop the '.' command (but not 'source') from
  looking up functions defined with the 'function' keyword. In the POSIX
  standard and on other shells, the '.' command finds only script files.

- The rm built-in's -d/--directory option has been fixed. It now properly
  removes empty directories and refuses to remove non-empty directories
  (as specified in https://www.austingroupbugs.net/view.php?id=802). Note
  that the rm built-in command isn't compiled in by default.

2021-11-23:

- A bug was fixed that allowed arithmetic expressions to assign out-of-range
  values to variables of an enumeration type defined with the 'enum' command,