@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2021-12-07:
+
+- The head and tail builtins now correctly handle files that do not have an
+  ending newline. (Note that the tail builtin is not compiled in by default.)
+
 2021-12-05:
 
 - Fixed an issue on illumos that caused some parameters in the getconf
